--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,8 @@
 <div class="container-fluid">
+    <div id="feature" class="row">
     <h2>Featured Bikes</h2>
     <!-- Carousel -->
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    {{!-- <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -33,46 +34,47 @@
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
+    </div> --}}
     </div>
 
     <div class="row">
         <div class="col-2">
-            <ul class="list-group">
-                <h4>Category</h4>
+            <h4>Category</h4>
+            <ul id="category" class="list-group">
                 {{#each category}}
                     <li class="list-group-item">{{this}}</li>
                 {{/each}}
             </ul>
 
-            <ul class="list-group">
-                <h4>Brand</h4>
+            <h4>Brand</h4>
+            <ul id="brand" class="list-group">
                 {{#each brand}}
                     <li class="list-group-item">{{this}}</li>
                 {{/each}}
             </ul>
 
-            <ul class="list-group">
+            <ul id="colour" class="list-group">
                 <h4>Color</h4>
                 {{#each colour}}
                     <li class="list-group-item">{{this}}</li>
                 {{/each}}
             </ul>
 
-            <ul class="list-group">
+            <ul id="frameSize" class="list-group">
                 <h4>Frame Size</h4>
                 {{#each frameSize}}
                     <li class="list-group-item">{{this}}</li>
                 {{/each}}
             </ul>
 
-            <ul class="list-group">
+            <ul id="frameMaterial" class="list-group">
                 <h4>Frame Material</h4>
                 {{#each frameMaterial}}
                     <li class="list-group-item">{{this}}</li>
                 {{/each}}
             </ul>
 
-            <ul class="list-group">
+            <ul id="year" class="list-group">
                 <h4>Year</h4>
                 {{#each year}}
                     <li class="list-group-item">{{this}}</li>
@@ -93,13 +95,27 @@
                     <a class="dropdown-item" href="#">Most Popular</a>
                     <a class="dropdown-item" href="#">Alphabetical</a>
                     <a class="dropdown-item" href="#">Price: Low to High</a>
-                    
+                    <a class="dropdown-item" href="#">Price: High to Low</a>
                 </div>
                 </div>
             </div>
 
             <div class="row">
+                {{!-- <div class="card-deck"> --}}
+                {{#each card}}
+                    <div class="card">
+                        {{!-- <img class="card-img-top" src="{{image}}" alt="Card image cap"> --}}
+                        <div class="card-body">
+                            <h5 class="card-title">{{name}}</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
 
+                        <div class="card-footer">
+                            <small class="text-muted">Order</small>
+                        </div>
+                        </div>
+                    </div>
+                {{/each}}
+                {{!-- </div> --}}
             </div>
         </div>
     </div>
