--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -30,9 +30,24 @@ html, body {
   height: 180px;
 }
 
+.card-footer {
+  width: 240px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cardCart {
+  width: 200px;
+  font-size: 1.5rem;
+}
+
 #brand, #colour, #frameSize, #frameMaterial, #year{
   max-height: 350px;
   overflow: auto;
+}
+
+#frameSizeHead {
+  margin-top: 35px;
 }
 
 /* span {
@@ -67,4 +82,90 @@ html, body {
 
 .Road {
   background-color: #96948fad;
+}
+
+/* Slider for alternate way of selecting number */
+#lengthRange {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  -moz-user-select: none;
+  appearance: none;
+  width: 50%; /* Full-width */
+  height: 10px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+  border-radius: 6px;
+  margin-top: 16px;
+}
+
+#lengthRange::-webkit-slider-runnable-track{
+-webkit-appearance: none;  /* Override default CSS styles */
+-moz-user-select: none;
+appearance: none;
+cursor: pointer;
+}
+
+/* Remove border from slider in firefox */
+#lengthRange::-moz-focus-outer {
+border: 0;
+}
+
+/* Mouse-over effects */
+#lengthRange:hover {
+opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* Slider thumb appearance for chrome */
+#lengthRange::-webkit-slider-thumb {
+-webkit-appearance: none; /* Override default look */
+appearance: none;  
+width: 25px; /* Set a specific slider handle width */
+height: 25px; /* Slider handle height */
+background: hsl(360, 91%, 36%); /* Red background */
+cursor: pointer; /* Cursor on hover */
+border-radius: 25px;
+}
+
+/* Slider thumb appearance for mozilla */
+#lengthRange::-moz-range-thumb {
+-webkit-appearance: none; /* Override default look */
+appearance: none;  
+width: 50px; /* Set a specific slider handle width */
+height: 50px; /* Slider handle height */
+background: hsl(360, 91%, 36%); /* Red background */
+cursor: pointer; /* Cursor on hover */
+border-radius: 25px;
+}
+
+/* Slider thumb appearance for IE */
+#lengthRange::-ms-thumb {
+-webkit-appearance: none; /* Override default look */
+appearance: none;  
+width: 50px; /* Set a specific slider handle width */
+height: 50px; /* Slider handle height */
+background: hsl(360, 91%, 36%); /* Red background */
+cursor: pointer; /* Cursor on hover */
+border-radius: 25px;
+}
+
+/* Number textbox */
+#lengthNumber{
+border-radius: 6px;
+width: 100px;
+height: 40px;
+outline: none;
+border-color: hsl(360, 91%, 36%);
+font-size: 150%;
+font-weight: bolder;
+color: hsl(206, 17%, 28%);
+display:inline-block;
+text-align: right;
+}
+/* Remove up and down arrow from number textbox */
+#lengthNumber::-webkit-outer-spin-button, #lengthNumber::-webkit-inner-spin-button {
+-webkit-appearance: none;  /* Override default CSS styles */
+-moz-user-select: none;
+appearance: none;
 }
