--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -115,9 +115,15 @@
                     <div class="card mx-auto">
                         <img class="card-img-top" src="/images/{{id}}.jpg" alt="Card image cap">
                         <div class="card-body {{category}}">
-                            <h5 class="card-title">{{name}}</h5>
-                            <p class="card-text">{{brand}}  {{year}}</p>
-                            <p class="card-text">$ {{price}}</p>
+                        <h5 class="card-title">{{name}}</h5>
+                            <div class="row">
+                            <div class="col-4">
+                            <p class="card-text cardPrice"><i class="fas fa-dollar-sign"></i> {{price}}</p>
+                            </div>
+                            <div class="col">
+                            <p class="card-text cardYear">{{brand}} {{year}}</p>
+                            </div>
+                        </div>
                         <div class="card-footer">
                             <button type="button" data-order="{{id}}" class="btn btn-secondary cardCart"><i class="fas fa-shopping-cart"></i> Add to Cart</button>
                         </div>
