adjusted col sizes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -117,8 +117,8 @@
                         <div class="card-body {{category}}">
                         <h5 class="card-title">{{name}}</h5>
                             <div class="row">
-                            <div class="col-4">
-                            <p class="card-text cardPrice"><i class="fas fa-dollar-sign"></i> {{price}}</p>
+                            <div class="col-5">
+                            <p class="card-text cardPrice"><i class="fas fa-dollar-sign"> {{price}}</i> </p>
                             </div>
                             <div class="col">
                             <p class="card-text cardYear">{{brand}} {{year}}</p>
