--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -10,12 +10,79 @@ html, body {
     padding: 0;
 }
 
+/* Topmenu styling */
+.menu {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.menu a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.menu a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.menu a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.menu .menuRight {
+  float: right;
+}
+
+.menu .icon {
+  display: none;
+}
+
+/* Menu at reduced browser width */
+@media screen and (max-width: 600px) {
+  .menu a:not(:first-child) {display: none;}
+  .menu a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .menu.responsive {position: relative;}
+  .menu.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .menu.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+/* Content after jumbotron */
 .container-fluid {
   padding-left: 50px;
   padding-right: 50px;
   /* background-image: url("/images/background.svg"); */
   /* color: White */
 }
+
+.searchTotal {
+  float: left;
+}
+
+.dropdown {
+  float: right;
+}
+
 .card {
   width: 350px;
   box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2);
