--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
       <a href=""><i class="fas fa-clipboard-list"></i> Sign Up</a>
       <a href="javascript:void(0);" class="icon" onclick="mobileMenu()"><i class="fa fa-bars"></i></a>
       <a class="menuRight" href=""><i class="fas fa-sign-out-alt"></i> Logout</a>
-      <a class="menuRight" href=""><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
+      <a id="cartParent" class="menuRight" href=""><span class="cartCounter">0</span><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
       <a class="menuRight" href=""><i class="fas fa-user"></i> Profile</a>
       </div>
 
