--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
       <a href=""><i class="fas fa-clipboard-list"></i> Sign Up</a>
       <a href="javascript:void(0);" class="icon" onclick="mobileMenu()"><i class="fa fa-bars"></i></a>
       <a class="menuRight" href=""><i class="fas fa-sign-out-alt"></i> Logout</a>
-      <a id="cartParent" class="menuRight" href=""><span class="cartCounter">0</span><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
+      <a id="cartParent" data-toggle="modal" data-target="#shoppingCart" class="menuRight" href=""><span class="cartCounter">0</span><i class="fas fa-shopping-cart"></i> Shopping Cart</a>
       <a class="menuRight" href=""><i class="fas fa-user"></i> Profile</a>
       </div>
 
@@ -37,6 +37,42 @@
       </div>
     </header>
   
+    <div class="modal fade" id="shoppingCart" tabindex="-1" role="dialog" aria-labelledby="cartModal" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              {{!-- <h4 class="modal-title" id="exampleModalLabel">Shopping Cart</h4> --}}
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              </button>
+            </div>
+            <div class="modal-body">
+              <h4 class="d-flex justify-content-between align-items-center mb-3">
+              <span class="text-muted">Your cart</span>
+              <span class="badge badge-secondary badge-pill">3</span>
+              </h4>
+              <ul class="list-group mb-3">
+                <li class="list-group-item d-flex justify-content-between lh-condensed">
+                  <div>
+                    <h6 class="my-0">Product name</h6>
+                    {{!-- <small class="text-muted">Brief description</small> --}}
+                  </div>
+                  <span class="text-muted">$12</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between">
+                  <span>Total (CAD)</span>
+                  <strong>$20</strong>
+                </li>
+              </ul>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-success">Save changes</button>
+              <button type="button" class="btn btn-primary">Proceed to Order</button>
+              <button type="button" class="btn btn-danger">Reset</button>
+            </div>
+          </div>
+        </div>
+      </div>
     {{{ body }}}
 
     <script
