--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+    {{> admin}}
+    
     {{!-- <div id="feature" class="row">
     <h2>Featured Bikes</h2> --}}
     <!-- Carousel -->
