implement orderItem and order API and fix a couple of bugs with the models

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,5 @@
 <div class="container-fluid">
-    {{> admin}}
-    
+    <h2>{{loggedIn}}</h2>
     {{!-- <div id="feature" class="row">
     <h2>Featured Bikes</h2> --}}
     <!-- Carousel -->
