--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,11 +1,7 @@
-{{#if loggedIn}}
-    {{> usermenu}}
-{{else}}
-    {{> guestmenu}}
-{{/if}}
+{{> usermenu}}
 
 <div class="container-fluid">
     <div class="row">
-        {{#user}}
+        {{email}}
     </div>
 </div>
