Seperated topnav from modal. Added layout for cart

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,8 +1,14 @@
+<header>
 {{#if loggedIn}}
     {{> usermenu}}
+    {{> shoppingcart}}
 {{else}}
     {{> guestmenu}}
 {{/if}}
+
+{{> jumbotron}}
+
+</header>
 
 <div class="container-fluid">
     <div class="row">
