Restricted guest access to cart

--- a/views/partials/guestmenu.handlebars
+++ b/views/partials/guestmenu.handlebars
@@ -1,13 +1,13 @@
 {{!-- Top NavMenu --}}
 <div class="menu" id="menu">
       <a href="/" class="active"><i class="fas fa-home"></i> Home</a>
-      <a href="/login"><i class="fas fa-sign-in-alt"></i> Login</a>
-      <a href="/signup"><i class="fas fa-clipboard-list"></i> Sign Up</a>
+      <a href="/login" class="menuRight"><i class="fas fa-sign-in-alt"></i> Login</a>
+      <a href="/signup" class="menuRight"><i class="fas fa-clipboard-list"></i> Sign Up</a>
       {{!-- <a href="/logout" class="menuRight"><i class="fas fa-sign-out-alt"></i> Logout</a> --}}
-      <a href="" data-toggle="modal" data-target="#shoppingCart" id="cartParent"  class="menuRight">
+      {{!-- <a href="" data-toggle="modal" data-target="#shoppingCart" id="cartParent"  class="menuRight">
         <span class="cartCounter">0</span><i class="fas fa-shopping-cart"></i> 
         Shopping Cart
-      </a>
+      </a> --}}
       {{!-- <a class="menuRight" href=""><i class="fas fa-user"></i> Profile</a> --}}
       <a href="javascript:void(0);" class="icon" onclick="mobileMenu()"><i class="fa fa-bars"></i></a>
 </div>
@@ -42,7 +42,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">Save changes</button>
+        {{!-- <button type="button" class="btn btn-success">Save changes</button> --}}
         <button type="button" class="btn btn-primary">Proceed to Order</button>
         <button type="button" class="btn btn-danger">Reset</button>
       </div>
