Added logic & styling for placed orders

--- a/views/partials/shoppingcart.handlebars
+++ b/views/partials/shoppingcart.handlebars
@@ -16,11 +16,11 @@
             {{#each cart}}
             <div class="row">
             <div class="col-xs-1 btn-group-vertical cartBtnGroup" style="width: 30px">
-                <a href="#shoppingCart" class="btn btn-success btn-sm incOrder" data-order="{{dataValues.BikeId}}">
+                <a href="#cart" class="btn btn-success btn-sm incOrder" data-order="{{dataValues.BikeId}}">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart-plus-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM4 14a1 1 0 1 1 2 0 1 1 0 0 1-2 0zm7 0a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z"/>
                     </svg>
                 </a>
-                <a href="#shoppingCart" class="btn btn-danger btn-sm decOrder" data-order="{{dataValues.BikeId}}">
+                <a href="#cart" class="btn btn-danger btn-sm decOrder" data-order="{{dataValues.BikeId}}">
                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart-dash-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM4 14a1 1 0 1 1 2 0 1 1 0 0 1-2 0zm7 0a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM6.5 7a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4z"/>
                     </svg>
                 </a>
@@ -40,15 +40,15 @@
           
           <li class="list-group-item d-flex justify-content-between">
             <span>Total (CAD)</span>
-            <strong>$ {{cart.[0].dataValues.Order.dataValues.totalprice}}</strong>
+            <strong>${{cart.[0].dataValues.Order.dataValues.totalprice}}</strong>
           </li>
         </ul>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">Save changes</button>
-        <button type="button" class="btn btn-primary">Proceed to Order</button>
-        <button type="button" class="btn btn-danger">Reset</button>
+        <button id="orderClose" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        {{!-- <button type="button" class="btn btn-success">Save changes</button> --}}
+        <button id="orderProceed" type="button" class="btn btn-primary">Proceed to Order</button>
+        <button id="orderEmpty" type="button" class="btn btn-danger">Empty Cart</button>
       </div>
     </div>
   </div>
