Updated profile route to reflect model change

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,7 +1,11 @@
 {{> usermenu}}
+{{> shoppingcart}}
 
 <div class="container-fluid">
     <div class="row">
         {{email}}
+        {{firstname}}
+        {{lastname}}
+        {{phone}}
     </div>
 </div>
