Added total items in cart to show on counter

--- a/views/partials/shoppingcart.handlebars
+++ b/views/partials/shoppingcart.handlebars
@@ -10,7 +10,7 @@
       <div class="modal-body">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
         <span class="text-muted">Your cart</span>
-        <span class="badge badge-secondary badge-pill">test</span>
+        <span class="badge badge-secondary badge-pill">{{cart.[0].dataValues.Order.dataValues.totalquantity}}</span>
         </h4>
         <ul class="list-group mb-3">
             {{#each cart}}
