--- a/views/partials/usermenu.handlebars
+++ b/views/partials/usermenu.handlebars
@@ -5,8 +5,8 @@
     {{!-- <a href="/signup"><i class="fas fa-clipboard-list"></i> Sign Up</a> --}}
     <a href="/logout" class="menuRight"><i class="fas fa-sign-out-alt"></i> Logout</a>
     <a href="/profile" id="profile" class="menuRight" href=""><i class="fas fa-user"></i> Profile</a>
-    <a href="" data-toggle="modal" data-target="#shoppingCart" id="cartParent"  class="menuRight">
-      <span class="cartCounter">0</span><i class="fas fa-shopping-cart"></i> 
+    <a href="" data-toggle="modal" data-target="#shoppingCart" id="cartParent" class="menuRight">
+      <span class="cartCounter">{{cartCounter}}</span><i class="fas fa-shopping-cart"></i> 
       Shopping Cart
     </a>
     <a href="javascript:void(0);" class="icon" onclick="mobileMenu()"><i class="fa fa-bars"></i></a>
