--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,11 +1,125 @@
 {{> usermenu}}
 {{> shoppingcart}}
 
-<div class="container-fluid">
-    <div class="row">
-        {{email}}
-        {{firstname}}
-        {{lastname}}
-        {{phone}}
+<div id="profileForm" class="container-fluid">
+  <div class="row">
+    <div class="col-lg-3">
+
+      <div class="row">
+        <div class="text-left">
+          <img id="profileAvatar" src="/images/avatar_placeholder.jpg" class="avatar rounded-circle img-fluid img-thumbnail" alt="avatar" style="width: 200px">
+          <h6>Upload a different photo...</h6>
+          <input type="file" class="text-center center-block file-upload">
+        </div>
+      </div>
+
+    <div id="profileList" class="list-group ">
+      <a href="#" class="list-group-item list-group-item-action active">Dashboard</a>
+      <a href="#" class="list-group-item list-group-item-action">Order History</a>
+      <a href="#" class="list-group-item list-group-item-action">Customer Support</a>
+    </div> 
     </div>
+
+    <div id="profileFormR" class="col-lg-9">
+      <form class="needs-validation" novalidate>
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <label for="firstName">First name</label>
+            <input type="text" class="form-control" id="firstName" placeholder="Bike" value="{{firstname}}" required>
+            <div class="invalid-feedback">
+              Valid first name is required.
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-3">
+            <label for="lastName">Last name</label>
+            <input type="text" class="form-control" id="lastName" placeholder="Lover" value="{{lastname}}" required>
+            <div class="invalid-feedback">
+              Valid last name is required.
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" id="email" placeholder="you@example.com" value="{{email}}">
+            <div class="invalid-feedback">
+              Please enter a valid email address for shipping updates.
+            </div>
+          </div>
+
+          <div class="col-md-6 mb-3">
+          <label for="phone">Phone</label>
+          <input type="tel" class="form-control" id="phone" placeholder="1234567890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="{{phone}}">
+          <div class="invalid-feedback">
+            Please enter a valid phone number for shipping updates.
+          </div>
+        </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="address">Address</label>
+          <input type="text" class="form-control" id="address" placeholder="1234 Main St" value="{{address}}" required>
+          <div class="invalid-feedback">
+            Please enter your shipping address.
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
+          <input type="text" class="form-control" id="address2" placeholder="Apartment or suite" value="{{address2}}">
+        </div>
+
+        <div class="row">
+          <div class="col-md-5 mb-3">
+            <label for="country">Country</label>
+            <select class="custom-select d-block w-100" id="country" value="{{country}}" required>
+              <option value="">Choose...</option>
+              <option>Canada</option>
+            </select>
+            <div class="invalid-feedback">
+              Please select a valid country.
+            </div>
+          </div>
+
+          <div class="col-md-4 mb-3">
+            <label for="province">Provinces and Territories</label>
+            <select class="custom-select d-block w-100" id="province" required>
+              <option value="">Choose...</option>
+              <option>Alberta</option>
+              <option>British Columbia</option>
+              <option>Manitoba</option>
+              <option>New Brunswick</option>
+              <option>Newfoundland and Labrador</option>
+              <option>Northwest Territories</option>
+              <option>Nova Scotia</option>
+              <option>Nunavut</option>
+              <option>Ontario</option>
+              <option>Prince Edward Island</option>
+              <option>Quebec</option>
+              <option>Saskatchewan</option>
+              <option>Yukon</option>
+            </select>
+            <div class="invalid-feedback">
+              Please provide a valid province or territory.
+            </div>
+          </div>
+          <div class="col-md-3 mb-3">
+            <label for="zip">Postal Code</label>
+            <input type="text" class="form-control" id="zip" placeholder="" pattern="[A-Za-z][0-9][A-Za-z] [0-9][A-Za-z][0-9]" required>
+            <div class="invalid-feedback">
+              Postal code required.
+            </div>
+          </div>
+
+          <hr class="mb-4">
+          <button id="profileUpdate" class="btn btn-primary btn-lg mx-auto" type="submit"><i class="fas fa-save"></i> Update</button>
+        </div>
+
+    </div>
+
+  </div>
 </div>
+
+    
