admin page is now working (added view/controller code required)

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,11 @@
 <header>
 {{#if loggedIn}}
-    {{> usermenu}}
-    {{> shoppingcart}}
+    {{#if admin}}
+        {{>adminmenu}}
+    {{else}}
+        {{> usermenu}}       
+        {{> shoppingcart}}
+    {{/if}}
 {{else}}
     {{> guestmenu}}
 {{/if}}
