--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,7 +9,7 @@
         <div class="text-left">
           <img id="profileAvatar" src="/images/avatar_placeholder.jpg" class="avatar rounded-circle img-fluid img-thumbnail" alt="avatar" style="width: 200px">
           <h6>Upload a different photo...</h6>
-          <input type="file" class="text-center center-block file-upload">
+          <input name="avatar" type="file" class="text-center center-block file-upload">
         </div>
       </div>
 
@@ -21,11 +21,11 @@
     </div>
 
     <div id="profileFormR" class="col-lg-9">
-      <form class="needs-validation" novalidate>
+      <form class="needs-validation" action="/profile" method="post" novalidate>
         <div class="row">
           <div class="col-md-6 mb-3">
             <label for="firstName">First name</label>
-            <input type="text" class="form-control" id="firstName" placeholder="Bike" value="{{firstname}}" required>
+            <input name="firstname" type="text" class="form-control" id="firstName" placeholder="Bike" value="{{firstname}}" required>
             <div class="invalid-feedback">
               Valid first name is required.
             </div>
@@ -33,7 +33,7 @@
 
           <div class="col-md-6 mb-3">
             <label for="lastName">Last name</label>
-            <input type="text" class="form-control" id="lastName" placeholder="Lover" value="{{lastname}}" required>
+            <input name="lastname" type="text" class="form-control" id="lastName" placeholder="Lover" value="{{lastname}}" required>
             <div class="invalid-feedback">
               Valid last name is required.
             </div>
@@ -43,24 +43,24 @@
         <div class="row">
           <div class="col-md-6 mb-3">
             <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="you@example.com" value="{{email}}">
+            <input name="email" type="email" class="form-control" id="email" placeholder="you@example.com" value="{{email}}">
             <div class="invalid-feedback">
-              Please enter a valid email address for shipping updates.
+              Please enter a valid email address.
             </div>
           </div>
 
           <div class="col-md-6 mb-3">
           <label for="phone">Phone</label>
-          <input type="tel" class="form-control" id="phone" placeholder="1234567890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="{{phone}}">
+          <input name="phone" type="tel" class="form-control" id="phone" placeholder="1234567890" pattern="[0-9]{3}[0-9]{3}[0-9]{4}" value="{{phone}}">
           <div class="invalid-feedback">
-            Please enter a valid phone number for shipping updates.
+            Please enter a valid phone number.
           </div>
         </div>
         </div>
 
         <div class="mb-3">
           <label for="address">Address</label>
-          <input type="text" class="form-control" id="address" placeholder="1234 Main St" value="{{address}}" required>
+          <input name="address" type="text" class="form-control" id="address" placeholder="1234 Main St" value="{{address}}" required>
           <div class="invalid-feedback">
             Please enter your shipping address.
           </div>
@@ -68,14 +68,15 @@
 
         <div class="mb-3">
           <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-          <input type="text" class="form-control" id="address2" placeholder="Apartment or suite" value="{{address2}}">
+          <input name="address2" type="text" class="form-control" id="address2" placeholder="Apartment or suite" value="{{address2}}">
         </div>
 
         <div class="row">
           <div class="col-md-5 mb-3">
             <label for="country">Country</label>
-            <select class="custom-select d-block w-100" id="country" value="{{country}}" required>
-              <option value="">Choose...</option>
+            <select name="country" class="custom-select d-block w-100" id="country" required>
+              <option value="{{country}}" hidden="hidden" selected="selected">{{country}}</option>
+              <option>Choose...</option>
               <option>Canada</option>
             </select>
             <div class="invalid-feedback">
@@ -85,8 +86,9 @@
 
           <div class="col-md-4 mb-3">
             <label for="province">Provinces and Territories</label>
-            <select class="custom-select d-block w-100" id="province" required>
-              <option value="">Choose...</option>
+            <select name="province" class="custom-select d-block w-100" id="province" required>
+              <option value="{{province}}" hidden="hidden" selected="selected">{{province}}</option>
+              <option>Choose...</option>
               <option>Alberta</option>
               <option>British Columbia</option>
               <option>Manitoba</option>
@@ -107,7 +109,7 @@
           </div>
           <div class="col-md-3 mb-3">
             <label for="zip">Postal Code</label>
-            <input type="text" class="form-control" id="zip" placeholder="" pattern="[A-Za-z][0-9][A-Za-z] [0-9][A-Za-z][0-9]" required>
+            <input name="postal" type="text" class="form-control" id="zip" placeholder="" pattern="[A-Za-z][0-9][A-Za-z] [0-9][A-Za-z][0-9]" value="{{postal}}" required>
             <div class="invalid-feedback">
               Postal code required.
             </div>
@@ -116,7 +118,7 @@
           <hr class="mb-4">
           <button id="profileUpdate" class="btn btn-primary btn-lg mx-auto" type="submit"><i class="fas fa-save"></i> Update</button>
         </div>
-
+      </form>
     </div>
 
   </div>
